# BigwhamRoadToCuda

./: CMakeLists.txt  Readme.md
il/: CMakeLists.txt
il/il/: Tree.h  math.h
il/il/benchmark/parallel/reduce/: kmeans_clustering.cpp  kmeans_clustering_0.cpp
il/il/container/2d/: Array2D.h
il/il/container/tree/: Tree.h
il/il/core/: core.h
il/il/linearAlgebra/dense/: norm.h
il/il/linearAlgebra/dense/blas/: blas.h  solve.h
il/il/linearAlgebra/dense/factorization/: Cholesky.h  Eigen.h  Householder.h  LU.h  SVD.h  Singular.h  luDecomposition.h  qrDecomposition.h  svdDecomposition.h
il/il/linearAlgebra/dense/factorization/_test/: Svd_test.cpp
il/il/linearAlgebra/matrixFree/solver/: Gmres.h
il/il/random/: gaussianmatrix.h
il/prettyPrint/lldb/: lldbinit
src/: contiguous_array2d_vector.hpp  fakeHMat.hpp  fakeHMatCUDA.hpp  gpu_hmat_matvec.cpp
